<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTrans"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/warning_cont"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/fon_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fon_dialog_header"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/warning"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="15dp"
            android:text="@string/warning_text"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buy"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/fon_button"
            android:text="@string/settings"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@id/warning_cont"
        android:layout_alignEnd="@id/warning_cont"
        android:background="@drawable/fon_button"
        android:elevation="5dp"
        android:src="@drawable/icon_close" />

</RelativeLayout>