<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_menu">

    <LinearLayout
        android:id="@+id/c1"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="60dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:layout_marginTop="35dp">
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1"
            android:textStyle="italic"
            android:textColor="@color/colorWhite"
            android:textSize="35sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_marginStart="7dp"
            android:text="серия"
            android:textColor="@color/colorWhite"
            android:textSize="35sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/anim_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">



        <LinearLayout
            android:id="@+id/stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/fon_dialog_a"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_stat1" />

                <TextView
                    android:id="@+id/stat_value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="5"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/stat_delta1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="(+5)"
                    android:textColor="@color/colorGold"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/stat1"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/fon_dialog_a"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_stat2" />

                <TextView
                    android:id="@+id/stat_value2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="5"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/stat_delta2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="(+5)"
                    android:textColor="@color/colorGold"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/stat2"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/fon_dialog_a"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_stat3" />

                <TextView
                    android:id="@+id/stat_value3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="5"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/stat_delta3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="(+5)"
                    android:textColor="@color/colorGold"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/stat3"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/fon_dialog_a"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_gold_coin" />

                <TextView
                    android:id="@+id/stat_value4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="5"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/stat_delta4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="7dp"
                    android:paddingStart="7dp"
                    android:text="(+2)"
                    android:textColor="@color/colorGold"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/coins"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stats"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/fon_button"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

    </RelativeLayout>

</RelativeLayout>